<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".ConfigActivity">

    <TextView
        android:id="@+id/config_setting_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/config_settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_timer" />

        <Switch
            android:id="@+id/switch_page_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/off"
            android:textOn="@string/on" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_time_limit" />

        <EditText
            android:id="@+id/page_timer_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_type" />

        <ToggleButton
            android:id="@+id/button_type_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/default_button"
            android:textOn="@string/image_button" />

    </LinearLayout>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="265dp"
        android:layout_height="77dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@color/green"
        android:onClick="startQuiz"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>