<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:padding="20dp"
        android:text="@string/coding_quiz"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/titleMessageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/title_message"
        android:textSize="25sp" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="265dp"
        android:layout_height="77dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@color/green"
        android:onClick="goToConfig"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold" />


</LinearLayout>